// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityAvatarComponent should display default avatar if AvatarSource === default_user.png 1`] = `
<pf-community-avatar
  AvatarSource={[Function String]}
  IsReply="false"
  avatarUrl={[Function String]}
>
  <div
    class="float-left pf-avatar default-post-avatar"
    ng-reflect-klass="float-left pf-avatar"
    ng-reflect-ng-class="default-post-avatar"
  >
     
  
  </div>
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should display post-size avatar if IsReply === false  1`] = `
<pf-community-avatar
  IsReply="false"
  avatarUrl={[Function String]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar post-avatar"
    ng-reflect-klass="float-left pf-avatar"
    ng-reflect-ng-class="post-avatar"
    src="https://f7021091349f6caaffd2-5b56effc7aa76a3323ddc3429496d092.ssl.cf5.rackcdn.com/avatars/undefined"
  />
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should display reply-size avatar if IsReply === true  1`] = `
<pf-community-avatar
  IsReply={[Function Boolean]}
  avatarUrl={[Function String]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar reply-avatar"
    ng-reflect-klass="float-left pf-avatar"
    ng-reflect-ng-class="reply-avatar"
    src="https://f7021091349f6caaffd2-5b56effc7aa76a3323ddc3429496d092.ssl.cf5.rackcdn.com/avatars/undefined"
  />
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should show avatar component 1`] = `
<pf-community-avatar
  IsReply="false"
  avatarUrl={[Function String]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar post-avatar"
    ng-reflect-klass="float-left pf-avatar"
    ng-reflect-ng-class="post-avatar"
    src="https://f7021091349f6caaffd2-5b56effc7aa76a3323ddc3429496d092.ssl.cf5.rackcdn.com/avatars/undefined"
  />
</pf-community-avatar>
`;
